--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,6 +5,8 @@ FROM eclipse-temurin:17.0.16_8-jre-ubi9-minimal AS runtime
 RUN adduser -m -d /usr/share/demo -s /bin/bash testuser
 USER testuser
 WORKDIR /usr/share/demo
-COPY --from=build /spring-petclinic/target/*.jar kishore.jar
+FROM tomcat:9.0
+COPY --from=build /spring-petclinic/target/*.war /usr/local/tomcat/webapps/petclinic.war
+# CMD ["catalina.sh", "run"]
 EXPOSE 8080/tcp
 CMD ["java","-jar","kishore.jar"]
